--- a/components/WorkList.module.scss
+++ b/components/WorkList.module.scss
@@ -30,6 +30,13 @@
   }
 }
 
+.art {
+  position: absolute;
+  top: -330px;
+  left: -160px;
+  z-index: 11;
+}
+
 .name {
   font-size: 36px;
   font-weight: 600;
