--- a/components/Loading.module.scss
+++ b/components/Loading.module.scss
@@ -9,9 +9,29 @@
   top: 0;
   left: 0;
   z-index: 30;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   &.close {
     opacity: 1;
     visibility: hidden;
+  }
+
+  // @include phone {
+  //   flex-direction: column-reverse;
+  // }
+}
+
+.text {
+  position: absolute;
+  margin-top: 120px;
+  margin-left: -310px;
+  font-size: 24px;
+  color: #575757;
+  @include phone {
+    // position: relative;
+    margin-top: 360px;
+    margin-left: 0;
   }
 }
 
@@ -110,4 +130,16 @@
   @include bg-contain;
   background-image: url("/maproomplayground/map/bg_cloud.png");
   // animation: cloud_right_top 1.5s forwards;
+}
+
+.icon_block {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 50;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
